Basic integration of notification

--- a/home_fix/basic/templates/basic/layout.html
+++ b/home_fix/basic/templates/basic/layout.html
@@ -61,6 +61,7 @@
                     </a>
                     <ul class="dropdown-menu text-small" aria-labelledby="dropdownUser1">
                         <li><a class="dropdown-item" href="{% url 'user_center:profile'%}">Profile</a></li>
+                        <li><a class="dropdown-item" href="{% url 'user_center:notifications'%}">Notifications</a></li>
                         <li><a class="dropdown-item" href="{% url 'user_center:transaction'%}">My Transactions</a></li>
                         <li><a class="dropdown-item" href="{% url 'user_center:request'%}">My Requests</a></li>
                         <li><a class="dropdown-item" href="{% url 'user_center:provide'%}">My Services</a></li>
