about page and minor bugs

--- a/home_fix/forum/templates/forum/forum.html
+++ b/home_fix/forum/templates/forum/forum.html
@@ -5,12 +5,13 @@
 {% load static %}
 <div class="container my-4">
     <div class="jumbotron">
-        <h1 class="display-4">TEST TEST TEST TEST TEST</h1>
-        <p class="lead">This is a simple hero unit, a simple jumbotron-style component for calling extra attention to featured content or information.</p>
+        <h1 class="display-4">PUBLIC HOMEFIXER FORUM</h1>
+        <p class="lead">Put up your questions here to our fellow homefixer friends! Discuss your household domestic house issues here. We believe some problems can be fixed by giving directions online!</p>
         <hr class="my-4">
-        <p>It uses utility classes for typography and spacing to space content out within the larger container.</p>
+        <p>Please post the question here</p>
           <button class="btn btn-primary btn-lg" data-target="#questions" data-toggle="modal" role="button">Add Question</button>
         </div>
+        <br><br>
         {% for post in posts %}
         <div class="container-fluid mt-10">
           <div class="row">
