--- a/home_fix/users/templates/users/about.html
+++ b/home_fix/users/templates/users/about.html
@@ -46,13 +46,25 @@
         height: 32rem;
       }
       .carousel-item > img {
-        position: absolute;
+        /*position: absolute;*/
         top: 0;
         left: 0;
         min-width: 100%;
-        height: 32rem;
+        height: 50rem;
+        margin: 5px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        width: 100%;
       }
 
+      /*.box {
+        margin: 5px;
+        overflow: hidden;
+        display: flex;
+        justify-content: center;
+        width: 100%;
+      }*/
     </style>
 
     
@@ -72,8 +84,7 @@
     </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img class="img-fluid tile-image" src="https://www.allprodad.com/wp-content/uploads/2022/02/03-09-22-love-your-neighbor-scaled.jpg">
         <div class="container">
           <div class="carousel-caption text-start">
             <h1>Get help from your neighbors!</h1>
@@ -82,8 +93,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+          <img class="img-fluid tile-image" src="https://www.forbes.com/advisor/wp-content/uploads/2021/03/free-credit-report-weekly.jpg">
         <div class="container">
           <div class="carousel-caption">
             <h1>Report the services if you find them fishy!</h1>
@@ -92,8 +102,7 @@
         </div>
       </div>
       <div class="carousel-item">
-        <svg class="bd-placeholder-img" width="100%" height="100%" xmlns="http://www.w3.org/2000/svg" aria-hidden="true" preserveAspectRatio="xMidYMid slice" focusable="false"><rect width="100%" height="100%" fill="#777"/></svg>
-
+        <img class="img-fluid tile-image" src="https://i.ytimg.com/vi/RwIxTTvN2yA/maxresdefault.jpg">
         <div class="container">
           <div class="carousel-caption text-end">
             <h1>Make more friends!</h1>
@@ -125,69 +134,69 @@
     <!-- Three columns of text below the carousel -->
     <div class="row" align="center">
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img class="rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQFPI7N3l_ALWQ/profile-displayphoto-shrink_800_800/0/1630719368769?e=1655337600&v=beta&t=qYOkgeNCv6IfxXniy0gpFAEWYL1lVUvwbPtkIoJosMY" width="140" height="140">
         <h2>Pruthviraj R Patil</h2>
         <p> Developer, Master of Computer Science, Class of 2022, New York University</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img class="rounded-circle" src="https://media-exp1.licdn.com/dms/image/D5635AQF0-PJDvL8Rtg/profile-framedphoto-shrink_800_800/0/1631100742777?e=1649952000&v=beta&t=wzahwVwnUvUaF1vJDl6KBV4EmZBJqSNPJ1AAOv2m8Po" width="140" height="140">
 
-        <h2>Heading</h2>
-        <p>Another exciting bit of representative placeholder content. This time, we've moved on to the second column.</p>
+        <h2>Bharath C</h2>
+        <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
-        <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
+        <img class="rounded-circle" src="https://media-exp1.licdn.com/dms/image/C5603AQG5vZ_BcB2hQA/profile-displayphoto-shrink_800_800/0/1625591269907?e=1655337600&v=beta&t=qvaD1eugYcUq16ucPt8KjzTPJXMW27XT-h3grj6wPrk" width="140" height="140">
 
-        <h2>Heading</h2>
-        <p>And lastly this, the third column of representative placeholder content.</p>
+        <h2>Vijay Krishna</h2>
+        <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
     <div class="row" align="center">
         <div class="col-sm-2"></div>
         <div class="col-sm-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-          <h2>Heading</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <img class="rounded-circle" src="https://media-exp1.licdn.com/dms/image/C4D03AQE4LJ8Q4s0r9g/profile-displayphoto-shrink_800_800/0/1622879772332?e=1655337600&v=beta&t=FkqDjuUXzTTpg1YvyH1szUzatJ0FGJ3wC6vSNkuLS_Q" width="140" height="140">
+          <h2>Yuhao Zhang</h2>
+          <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
         </div>
 
         <div class="col-sm-4">
-          <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"/><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
-          <h2>Heading</h2>
-          <p>Some representative placeholder content for the three columns of text below the carousel. This is the first column.</p>
+          <img class="rounded-circle" src="https://media-exp1.licdn.com/dms/image/D4D35AQFZ4pkDXBh7MA/profile-framedphoto-shrink_800_800/0/1644170453693?e=1649952000&v=beta&t=Gr2vX1zUIpBv_hcGcaK090AcPDJcil-PL4zyJW_flgw" width="140" height="140">
+          <h2>Jash Marchant</h2>
+          <p>Developer, Master of Computer Science, Class of 2023, New York University</p>
         </div>
         <div class="col-sm-2"></div>
     </div>
 
 
     <!-- START THE FEATURETTES -->
-
+    <br>
     <hr class="featurette-divider">
-
+    <br><br>
     <div class="row featurette">
-      <div class="col-md-7">
+      <div class="col-md-7 ">
         <h2 class="featurette-heading">The first ever <span class="text-muted">project that is fully customer centric!</span></h2>
-        <p class="lead">Our Mission is to help every person to have that friend who helps to fix house hold issues and provide similar help. We believe that this platform users can not only take the help but also provide the help for their friends charging the coins of their wish. So why to wait? Subscribe for our Golden Hammer tier soon and enjoy this platform by getting help from your nearest friend to fix your household issue! We assure you that you will enjoy our services!</p>
+        <p class="lead mx-auto">Our Mission is to help every person to have that friend who helps to fix house hold issues and provide similar help. We believe that this platform users can not only take the help but also provide the help for their friends charging the coins of their wish. So why to wait? Subscribe for our Golden Hammer tier soon and enjoy this platform by getting help from your nearest friend to fix your household issue! We assure you that you will enjoy our services!</p>
       </div>
-      <div class="col-md-5">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 align-items-center">
+        <img class="featurette-image img-fluid mx-auto" src="https://visionedgemarketing.com/wp-content/uploads/2009/06/customer-centric-best-practices.jpg" width="500" height="500">
       </div>
     </div>
+
+    <br><br>
 
     <hr class="featurette-divider">
 
+    <br><br>
     <div class="row featurette">
-      <div class="col-md-7 order-md-2">
+      <div class="col-md-7 order-md-2 ">
         <h2 class="featurette-heading">Oh for sure, it’s that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Try our services for free initially. Get 20 coins for a free trial. Get assured quality household services done.</p>
+        <p class="lead mx-auto">Try our services for free initially. Get 20 coins for a free trial. Get assured quality household services done.</p>
       </div>
-      <div class="col-md-5 order-md-1">
-        <svg class="bd-placeholder-img bd-placeholder-img-lg featurette-image img-fluid mx-auto" width="500" height="500" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 500x500" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#eee"/><text x="50%" y="50%" fill="#aaa" dy=".3em">500x500</text></svg>
-
+      <div class="col-md-5 order-md-1 align-items-center">
+        <img class="featurette-image img-fluid mx-auto" src="https://media.istockphoto.com/vectors/free-trial-sign-free-trial-blackgreen-round-ribbon-sticker-vector-id1188373880?k=20&m=1188373880&s=612x612&w=0&h=hBrgDbxwVEtRas8NHNUWFxFIcZ9bOz2IkHlkkKZMffo=" width="500" height="500">
       </div>
     </div>
-
     <hr class="featurette-divider">
 
     <!-- /END THE FEATURETTES -->
