--- a/home_fix/user_center/templates/user_center/profile.html
+++ b/home_fix/user_center/templates/user_center/profile.html
@@ -29,18 +29,18 @@
     </style>
     <br><br>
     <center>
-        <h1 class="display-7 fw-bold" style="text-transform:uppercase"> {{ user.first_name }}'s USER CENTER</h1>
+        <h1 class="display-7 fw-bold" style="text-transform:uppercase">My Profile</h1>
     </center>
     <br>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <!-- <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet"> -->
 
-    <div class="container">
+    <div class="container mb-5">
         <div class="row">
             <div class="col-md-6 mx-auto">
                 <div class="card">
-                    <div class="card-header"><h5>User Profile</h5></div>
+                    <div class="card-header"><h5>{{ user.first_name }}'s Profile</h5></div>
                     <div class="card-body">
 
                         <div class="box box-info">
@@ -48,14 +48,14 @@
                                 <br>
                                 <div class="row">
                                     <div class="col-sm-5" align="right">
-                                            <img alt="User Pic"
-                                                 src="https://png.pngitem.com/pimgs/s/294-2947257_interface-icons-user-avatar-profile-user-avatar-png.png"
-                                                 id="profile-image1" class="img-circle img-responsive">
+                                        <img alt="User Pic"
+                                             src="https://png.pngitem.com/pimgs/s/294-2947257_interface-icons-user-avatar-profile-user-avatar-png.png"
+                                             id="profile-image1" class="img-circle img-responsive">
                                         <br>
                                     </div>
                                     <div class="col">
-                                            <h4 style="color:#00b1b1;">{{ user.first_name }} {{ user.last_name }}</h4>
-                                            <h5>A Proud Homefixer</h5>
+                                        <h4 class="text-primary">{{ user.first_name }} {{ user.last_name }}</h4>
+                                        <h5 class="text-muted">A proud Homefixer</h5>
                                     </div>
                                 </div>
                                 <br>
@@ -64,112 +64,121 @@
                                 <hr style="margin:5px 0 5px 0;">
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">First Name : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">First Name :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.first_name }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.first_name }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Last Name : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Last Name :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.last_name}}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.last_name }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Gender : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Gender :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.gender }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.gender }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Email ID : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Email ID :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.email }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.email }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Current Coins : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Current Coins :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.coin }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.coin }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Country : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Country :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.country }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.country }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Street Address : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Street Address :</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col" align="left">{{ user.street }}</div>
-                                <div class="clearfix"></div>
-                                <div class="bot-border"></div>
+                                    <div class="col" align="left">{{ user.street }}</div>
+                                    <div class="clearfix"></div>
+                                    <div class="bot-border"></div>
                                 </div>
 
 
                                 <div class="row">
-                                <div class="col">
-                                    <div class="row">
-                                        <div class="col"></div>
-                                        <div class="col title">Membership Level : </div>
+                                    <div class="col">
+                                        <div class="row">
+                                            <div class="col"></div>
+                                            <div class="col title fw-bold">Membership:</div>
+                                        </div>
                                     </div>
-                                </div>
-                                <div class="col">
-                                    {% if user.tier == 1 %}
-                                        Starter
-                                    {% endif %}
+                                    <div class="col">
+                                        {% if user.tier == 1 %}
+                                            Starter
+                                        {% endif %}
 
-                                    {% if user.tier == 2 %}
-                                        Golden Hammer
-                                    {% endif %}
+                                        {% if user.tier == 2 %}
+                                            Golden Hammer
+                                        {% endif %}
 
-                                    {% if user.tier == 3 %}
-                                        Loyal Customer
-                                    {% endif %}</div>
+                                        {% if user.tier == 3 %}
+                                            Loyal Customer
+                                        {% endif %}</div>
                                 </div>
                                 <div class="clearfix"></div>
                                 <div class="bot-border"></div>
+                                <div class="col justify-content-center align-self-center text-center mt-3">
+                                    {#                <button type="button" class="btn btn-lg btn-warning">#}
+                                    {#                    <a href="{% url 'user_center:profile_editor' %}" role="button">#}
+                                    {#                        Edit your information#}
+                                    {#                    </a>#}
+                                    {#                </button>#}
+                                    <a class="btn btn-warning" href="{% url 'user_center:profile_editor' %}" role="button">Edit Profile</a>
+                                </div>
+
                             </div>
                         </div>
                     </div>
@@ -178,20 +187,23 @@
         </div>
     </div>
 
-    <style type="text/css">
-        a {
-            text-decoration: none;
-            color: black;
-        }
-    </style>
-    <br>
-    <div class="col justify-content-center align-self-center text-center">
-        <button type="button" class="btn btn-lg btn-primary btn-success">
-            <a href="{% url 'user_center:profile_editor' %}" role="button">
-                Edit your information
-            </a>
-        </button>
-    </div>
+    {#  Footer #}
+    <footer class="bg-dark py-4 mt-auto">
+        <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white">Copyright &copy; Homefix 2022</div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="#!">Privacy</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Terms</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Contact</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 
 
     <script>
